--- a/src/components/slide-title/slide-title.scss
+++ b/src/components/slide-title/slide-title.scss
@@ -1,3 +1,8 @@
 .slide-title {
     font-size: 32px;
+    font-weight: 700;
+
+    &__container {
+        max-width: 700px;
+    }
 }
